fonts & variables setup

--- a/source/index.html
+++ b/source/index.html
@@ -10,11 +10,12 @@
 
   <body class="page-body">
     <!-- пример использования спрайта -->
-    <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
+    <!-- <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
     <svg>
       <use href="/__spritemap#sprite-user"></use>
-    </svg>
+    </svg> -->
     <!-- примеры требуемых атрибутов data-test="*" -->
+     <h1 class="main"> Привет</h1>
     <div data-test="hero">hero</div>
     <div data-test="about">about</div>
     <div data-test="price">price</div>
