--- a/source/index.html
+++ b/source/index.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
-<html lang="ru" data-validate="html">
+<html class="page" lang="ru" data-validate="html">
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUPERGYM</title>
+    <meta name="description" content="Фитнес центр SUPERGYM.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="./fonts/AlumniSans-ExtraBold.woff2" type="font/woff2" as="font">
+    <link rel="preload" href="./fonts/AlumniSans-SemiBold.woff2" type="font/woff2" as="font">
+    <link rel="preload" href="./fonts/RobotoCondensed-Bold.woff2" type="font/woff2" as="font">
+    <link rel="preload" href="./fonts/RobotoCondensed-Light.woff2" type="font/woff2" as="font">
+    <link rel="preload" href="./fonts/RobotoCondensed-Medium.woff2" type="font/woff2" as="font">
+    <link rel="preload" href="./fonts/RobotoCondensed-Regular.woff2" type="font/woff2" as="font">
     <link rel="stylesheet" href="sass/style.scss">
   </head>
 
-  <body class="page-body">
-    <!-- пример использования спрайта -->
-    <!-- <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
-    <svg>
-      <use href="/__spritemap#sprite-user"></use>
-    </svg> -->
-    <!-- примеры требуемых атрибутов data-test="*" -->
-     <h1 class="main"> Привет</h1>
+  <body class="page__body">
+    <section class="page__hero hero" data-test="hero">
+      <h1 class="visually-hidden">Фитнес центр SUPERGYM.</h1>
+      <div class="container">
+        <div class="hero__hero-header hero-header">
+          <div class="hero-header__logo-wrapper">
+            <picture>
+              <source media="(min-width: 1366px)" srcset="./img/logo-desktop.svg" width="130" height="26" type="image/svg+xml">
+              <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg" width="110" height="22" type="image/svg+xml">
+              <img class="hero-header__logo" src="./img/logo-mobile.svg" width="100" height="20" alt="Логотип фитнес центра.">
+            </picture>
+          </div>
+          <a class="hero-header__phone" href="tel:+78005555555">8 800 555-55-55</a>
+        </div>
+        <div class="hero__promo promo">
+          <div class="promo__promo-info promo-info">
+            <p class="promo-info__promo-city">Омск</p>
+            <p class="promo-info__promo-services">Тренажёрный зал
+              Групповые занятия
+              Кардио-зона</p>
+            <p class="promo-info__promo-title">Фитнес центр</p>
+            <a class="button button--button-secondary promo-info__button" href="#">Купить абонемент</a>
+          </div>
+          <div class="promo__picture-wrapper">
+            <picture>
+              <source media="(min-width: 1366px)" srcset="./img/hero-desktop@1x.webp, ./img/hero-desktop@2x.webp" type="image/webp" width="500" height="524">
+              <source media="(min-width: 1366px)" srcset="./img/hero-desktop@1x.jpg, ./img/hero-desktop@2x.jpg" type="image/jpeg" width="500" height="524">
+              <source media="(min-width: 768px)" srcset="./img/hero-tablet@1x.webp, ./img/hero-tablet@2x.webp" type="image/webp" width="324" height="390">
+              <img class="promo__promo-picture" src="./img/hero-tablet@1x.jpg" srcset="./img/hero-tablet@2x.jpg" width="324" height="390" alt="Наш славный тренер.">
+            </picture>
+          </div>
+        </div>
+      </div>
+    </section>
     <div data-test="hero">hero</div>
     <div data-test="about">about</div>
     <div data-test="price">price</div>
