--- a/source/index.html
+++ b/source/index.html
@@ -40,16 +40,18 @@
           </div>
           <div class="promo__picture-wrapper">
             <picture>
-              <source media="(min-width: 1366px)" srcset="./img/hero-desktop@1x.webp, ./img/hero-desktop@2x.webp" type="image/webp" width="500" height="524">
-              <source media="(min-width: 1366px)" srcset="./img/hero-desktop@1x.jpg, ./img/hero-desktop@2x.jpg" type="image/jpeg" width="500" height="524">
-              <source media="(min-width: 768px)" srcset="./img/hero-tablet@1x.webp, ./img/hero-tablet@2x.webp" type="image/webp" width="324" height="390">
-              <img class="promo__promo-picture" src="./img/hero-tablet@1x.jpg" srcset="./img/hero-tablet@2x.jpg" width="324" height="390" alt="Наш славный тренер.">
+              <source media="(min-width: 1366px)" srcset="./img/hero-desktop@1x.webp, ./img/hero-desktop@2x.webp 2x" type="image/webp" width="500" height="524">
+              <source media="(min-width: 1366px)" srcset="./img/hero-desktop@1x.jpg, ./img/hero-desktop@2x.jpg 2x" type="image/jpeg" width="500" height="524">
+              <source media="(min-width: 768px)" srcset="./img/hero-tablet@1x.webp, ./img/hero-tablet@2x.webp 2x" type="image/webp" width="324" height="390">
+              <img class="promo__promo-picture" src="./img/hero-tablet@1x.jpg" srcset="./img/hero-tablet@2x.jpg 2x" width="324" height="390" alt="Наш славный тренер.">
             </picture>
           </div>
         </div>
       </div>
     </section>
-    <div data-test="hero">hero</div>
+    <section class="page__about about" data-test="about">
+
+    </section>
     <div data-test="about">about</div>
     <div data-test="price">price</div>
     <div data-test="games">games</div>
