--- a/source/index.html
+++ b/source/index.html
@@ -50,7 +50,29 @@
       </div>
     </section>
     <section class="page__about about" data-test="about">
+      <div class="container">
+        <div class="about__about-details about-details">
+          <h2 class="about-details__title section-title">Тренажёрный зал</h2>
+          <p class="about-details__sub-title sub-title">Просторный зал площадью 900 кв/м</p>
+          <p class="about-details__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления тела и здоровья. Тренажёрный зал оснащён всем необходимым современным оборудованием для всех спортсменов.</p>
+        </div>
+        <div class="about__picture-wrapper">
+          <picture>
+            <img class="about__gym-picture" src="" alt="">
+          </picture>
+          <div class="about__picture-mask"></div>
+        </div>
+        <div class="about__video video">
+          <div class="vide__preview-wrapper">
+            <picture>
+              <img class="vide__preview-picture" src="" alt="">
+            </picture>
+          </div>
+          <div class="video__play-button" >
 
+          </div>
+        </div>
+      </div>
     </section>
     <div data-test="about">about</div>
     <div data-test="price">price</div>
