--- a/source/index.html
+++ b/source/index.html
@@ -81,11 +81,10 @@
             </picture>
             <div class="video__preview-mask"></div>
           </div>
-          <button class="video__play-button video__play-button--mobile" type="button">
-            <!-- <svg class="video__play-icon">
-              <use href="/__spritemap#sprite-play-mobile" width="12" height="12"></use>
-            </svg> -->
+          <button class="video__play-button" type="button">
+            <div class="video__play-icon"></div>
           </button>
+          <div class="video__video-iframe"></div>
         </div>
       </div>
     </section>
@@ -99,7 +98,7 @@
     <div data-test="reviews">reviews</div>
     <div data-test="form">form</div>
     <div data-test="footer">footer</div>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" defer src="js/main.js"></script>
   </body>
 
 </html>
