animations for price

--- a/source/index.html
+++ b/source/index.html
@@ -106,31 +106,37 @@
         </div>
         <ul class="price__price-cards price-cards">
           <li class="price-cards__price-card price-card">
-            <h3 class="price-card__title">С тренером</h3>
-            <p class="price-card__description">12 занятий</p>
-            <div class="price-card__price-wrapper">
-              <span class="price-card__price-shadow">5000</span>
-              <span class="price-card__price">5000</span>
+            <div class="price-card__price-card-content">
+              <h3 class="price-card__title">С тренером</h3>
+              <p class="price-card__description">12 занятий</p>
+              <div class="price-card__price-wrapper">
+                <span class="price-card__price-shadow" aria-hidden="true">5000</span>
+                <span class="price-card__price">5000</span>
+              </div>
+              <a class="price-card__buy-button button button--button-primary" type="button" href="#">Купить абонемент</a>
             </div>
-            <button class="price-card__buy-button button button--button-primary" type="button">Купить абонемент</button>
           </li>
           <li class="price-cards__price-card price-card">
-            <h3 class="price-card__title">Дневной</h3>
-            <p class="price-card__description">с 8:00 до 17:00</p>
-            <div class="price-card__price-wrapper">
-              <span class="price-card__price-shadow">1700</span>
-              <span class="price-card__price">1700</span>
+            <div class="price-card__price-card-content">
+              <h3 class="price-card__title">Дневной</h3>
+              <p class="price-card__description">с 8:00 до 17:00</p>
+              <div class="price-card__price-wrapper">
+                <span class="price-card__price-shadow" aria-hidden="true">1700</span>
+                <span class="price-card__price">1700</span>
+              </div>
+              <a class="price-card__buy-button button button--button-primary" type="button" href="#">Купить абонемент</a>
             </div>
-            <button class="price-card__buy-button button button--button-primary" type="button">Купить абонемент</button>
           </li>
           <li class="price-cards__price-card price-card">
-            <h3 class="price-card__title">Полный день</h3>
-            <p class="price-card__description">с 8:00 до 22:00</p>
-            <div class="price-card__price-wrapper">
-              <span class="price-card__price-shadow">2700</span>
-              <span class="price-card__price">2700</span>
+            <div class="price-card__price-card-content">
+              <h3 class="price-card__title">Полный день</h3>
+              <p class="price-card__description">с 8:00 до 22:00</p>
+              <div class="price-card__price-wrapper">
+                <span class="price-card__price-shadow" aria-hidden="true">2700</span>
+                <span class="price-card__price">2700</span>
+              </div>
+              <a disabled class="price-card__buy-button button button--button-primary" type="button" href="#">Купить абонемент</a>
             </div>
-            <button class="price-card__buy-button button button--button-primary" type="button">Купить абонемент</button>
           </li>
         </ul>
       </div>
