--- a/source/index.html
+++ b/source/index.html
@@ -153,7 +153,8 @@
                   Дата
                 </div>
                 <div class="games-promo__date-details">
-                  <span class="games-promo__bold">7</span>Марта 2019
+                  <div class="games-promo__bold">7</div>
+                  <div class="games-promo__small">Марта 2019</div>
                 </div>
               </div>
               <div class="games-promo__date-wrapper">
@@ -164,7 +165,7 @@
               </div>
             </div>
             <p class="games-promo__text">Ежегодные соревнования по CrossFit</p>
-            <a class="games-promo__button button button--button-secondary">Заполнить заявку</a>
+            <a class="games-promo__button button button--button-secondary" href="#">Заполнить заявку</a>
           </div>
           <div class="games-promo__picture-wrapper">
             <picture>
