--- a/source/index.html
+++ b/source/index.html
@@ -183,8 +183,8 @@
       <div class="container  juri__juri-wrapper">
         <h2 class="juri__title">Жюри</h2>
         <div class="juri__swiper-container">
-          <div class="juri__swiper-button--prev juri__swiper-button swiper-button-prev swiper-button-prev" tabindex="-1"></div>
-          <div class="juri__swiper-button--next juri__swiper-button swiper-button-next" tabindex="-1"></div>
+          <div class="juri__swiper-button--prev juri__swiper-button swiper-button-prev swiper-button" tabindex="0"></div>
+          <div class="juri__swiper-button--next juri__swiper-button swiper-button-next swiper-button" tabindex="0"></div>
           <div class="juri__swiper swiper">
             <div class="juri__swiper-wrapper swiper-wrapper">
               <div class="swiper-slide juri__slide" tabindex="0">
@@ -341,62 +341,67 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section>
     <section class="page__features features" data-test="features">
       <div class="container container--full-width features__features-wrapper">
         <h2 class="features__title">Наши преимущества</h2>
-        <ul class="features__list">
-          <li class="features__item">
-            <p>
-              <strong>900</strong>
-              <span>кв/м</span>
-            </p>
-            <div>
-              <h3>Площадь</h3>
-              <p>Занимайтесь без очередей<br> и толкучки</p>
-            </div>
-          </li>
-          <li class="features__item">
-            <p>
-              <strong>70</strong>
-              <span>машин</span>
-            </p>
-            <div>
-              <h3>Собственная парковка</h3>
-              <p>Вы всегда найдёте место для своей машины на нашей парковке</p>
-            </div>
-          </li>
-          <li class="features__item features__item--central">
-            <p>
-              <strong>100</strong>
-              <span>Тренажёров</span>
-            </p>
-            <p>Современные тренажёры на все группы мышц</p>
-          </li>
-          <li class="features__item">
-            <p>
-              <strong>350</strong>
-              <span>мест</span>
-            </p>
-            <div>
-              <h3>Комфорт</h3>
-              <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
-            </div>
-          </li>
-          <li class="features__item">
-            <p>
-              <strong>5+</strong>
-              <span>лет</span>
-            </p>
-            <div>
-              <h3>Тренерский опыт</h3>
-              <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
-            </div>
-          </li>
-        </ul>
+        <div class="features__content-wrapper">
+          <ul class="features__list">
+            <li class="features__item feature">
+              <p>
+                <strong>900</strong>
+                <span>кв/м</span>
+              </p>
+              <div>
+                <h3>Площадь</h3>
+                <p>Занимайтесь без очередей<br> и толкучки</p>
+              </div>
+            </li>
+            <li class="features__item feature">
+              <p>
+                <strong>70</strong>
+                <span>машин</span>
+              </p>
+              <div>
+                <h3>Собственная парковка</h3>
+                <p>Вы всегда найдёте место для своей машины на нашей парковке</p>
+              </div>
+            </li>
+          </ul>
+          <ul class="features__list">
+            <li class="features__item feature feature--central">
+              <p>
+                <strong>100</strong>
+                <span>Тренажёров</span>
+              </p>
+              <p>Современные тренажёры на все группы мышц</p>
+            </li>
+          </ul>
+          <ul class="features__list">
+            <li class="features__item feature">
+              <p>
+                <strong>350</strong>
+                <span>мест</span>
+              </p>
+              <div>
+                <h3>Комфорт</h3>
+                <p>Просторные раздевалки, душевые, фен, Wi-Fi, кулеры</p>
+              </div>
+            </li>
+            <li class="features__item feature">
+              <p>
+                <strong>5+</strong>
+                <span>лет</span>
+              </p>
+              <div>
+                <h3>Тренерский опыт</h3>
+                <p>Добивайтесь своих целей быстрее с профессиональным тренером</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <div data-test="features">features</div>
