states for buttons WIP

--- a/source/index.html
+++ b/source/index.html
@@ -183,8 +183,12 @@
       <div class="container  juri__juri-wrapper">
         <h2 class="juri__title">Жюри</h2>
         <div class="juri__swiper-container">
-          <div class="juri__swiper-button--prev juri__swiper-button swiper-button-prev swiper-button" tabindex="0"></div>
-          <div class="juri__swiper-button--next juri__swiper-button swiper-button-next swiper-button" tabindex="0"></div>
+          <div class="juri__button-wrapper juri__button-wrapper--prev">
+            <button class="juri__swiper-button--prev juri__swiper-button swiper-button-prev swiper-button" tabindex="0"></button>
+          </div>
+          <div class="juri__button-wrapper juri__button-wrapper--next">
+            <button class="juri__swiper-button--next juri__swiper-button swiper-button-next swiper-button" tabindex="0"></button>
+          </div>
           <div class="juri__swiper swiper">
             <div class="juri__swiper-wrapper swiper-wrapper">
               <div class="swiper-slide juri__slide" tabindex="0">
