states for swiper buttons

--- a/source/index.html
+++ b/source/index.html
@@ -187,7 +187,7 @@
             <button class="juri__swiper-button--prev juri__swiper-button swiper-button-prev swiper-button" tabindex="0"></button>
           </div>
           <div class="juri__button-wrapper juri__button-wrapper--next">
-            <button class="juri__swiper-button--next juri__swiper-button swiper-button-next swiper-button" tabindex="0"></button>
+            <button class="juri__swiper-button--next juri__swiper-button swiper-button-next swiper-button" tabindex="0" disabled></button>
           </div>
           <div class="juri__swiper swiper">
             <div class="juri__swiper-wrapper swiper-wrapper">
